Bug 737966 - Evaluating nsIXMLHttpRequest.responseText throws on certain parsing errors. r=sicking